style: fix horizontal scrolling overflow on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -222,3 +222,6 @@
 .faq-answer {
     overflow: hidden;
 }
+
+html, body { overflow-x: hidden; }
+
